[project]
name = "hyperswitch"
version = "0.1.0"
description = "A unofficial python sdk for hyperswitch."
authors = [
    {name = "Borje's Tech",email = "info@borjestech.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
